# CasinoObserver

./: .clang-format  .gitignore  CMakeLists.txt  GDD.md  README.md  card.h  compile_commands.json  deck.cpp  deck.h  game_loop.cpp  game_object_preview.cpp  game_state.h  main.cpp  run_preview.sh  state_manager.cpp  state_manager.h  textures_loader.cpp  textures_loader.h
.cache/clangd/index/: BlendMode.hpp.25331D415E8A9978.idx  CircleShape.hpp.68752C80A6008067.idx  Clipboard.hpp.51E095A4D3FF431B.idx  Clock.hpp.9B2251F93F763320.idx  Color.hpp.8FBA99EEAC3E359C.idx  Config.hpp.736B8A19520DC07C.idx  Context.hpp.D79F677171882694.idx  ContextSettings.hpp.B0D1D5543FAF15AB.idx  ConvexShape.hpp.2CE08547F3A5FFC3.idx  Cursor.hpp.E1373D210588AD01.idx  Drawable.hpp.E98B50C5F72B3600.idx  Err.hpp.BD2C7295D1BD20BE.idx  Event.hpp.68D6E7394FF8E3E6.idx  Export.hpp.3F914C9FBD523E43.idx  Export.hpp.47CA2944C0333EEA.idx  Export.hpp.EC9B1DD3187D5786.idx  FileInputStream.hpp.3B1B67A6150F8049.idx  Font.hpp.19509E1D02F1D6D5.idx  GlResource.hpp.A7FE706B33F65E2D.idx  Glsl.hpp.0A6B3923CA1247C9.idx  Glsl.inl.FCB8B055B2DD4CEA.idx  Glyph.hpp.6476E6F9BA2FB159.idx  Graphics.hpp.B10EE490C75F5B5B.idx  Image.hpp.440AB4537C9BD4CB.idx  InputStream.hpp.3FC8054FFEFD9F39.idx  Joystick.hpp.F1F19171B6680752.idx  Keyboard.hpp.91663CA99937C127.idx  Lock.hpp.883041807415508D.idx  MemoryInputStream.hpp.99BF02DEF43DD537.idx  Mouse.hpp.4C3AFD0CED5E2A8D.idx  Mutex.hpp.5DA7017DB89D5AB5.idx  NonCopyable.hpp.579AD2AF58DBD7CA.idx  PrimitiveType.hpp.12BB3D7F44D2D9B7.idx  Rect.hpp.13BB3DEB3AB78AD1.idx  Rect.inl.9DDF8E2C2640FB7C.idx  RectangleShape.hpp.8EC4C3508DAFDEF6.idx  RenderStates.hpp.D7B13AD7B7E0B1D1.idx  RenderTarget.hpp.068572DCF3EE8BBF.idx  RenderTexture.hpp.13D300020A4838E3.idx  RenderWindow.hpp.690CF64239E0F9A6.idx  (+44 more)
BrainManager/: constants.h  gambler.cpp  gambler.h  table.cpp  table.h
Gamblers/: CMakeLists.txt  gambler.cpp  gambler.h  gambler.hpp
GameStates/: CMakeLists.txt  Makefile  blackjack_close.cpp  blackjack_close.h  blackjack_close.hpp  cmake_install.cmake  game_state.cpp  game_state.h  game_state.hpp  poker_close.cpp  poker_close.h  poker_close.hpp  state_manager.cpp  state_manager.h  work_room.cpp  work_room.h  work_room.hpp
SFML_ARM/templates/SFML/SFML App.xctemplate/: main.cpp
SFML_ARM/templates/SFML/SFML CLT.xctemplate/: main.cpp
Tables/: CMakeLists.txt  balckjack_table.cpp  blackjack_table.h  blackjack_table.hpp  poker_table.cpp  poker_table.h  poker_table.hpp  table.cpp  table.h  table.hpp
Tests/: CMakeLists.txt  run_tests.cpp  tests.cpp
Tests/heavy/: MPMCQueue.cpp  blackjack_games.cpp  poker_games.cpp
Tests/light/: event_wrapper.cpp  game_object.cpp  stats_window.cpp  subwindows_managment.cpp
assets/game_objects/: blackjack_close_objects.json  interrogation_room_objects.json  poker_close_objects.json  stats_subwindow.json  test_object.json  work_room_objects.json
assets/game_objects/utils/: 1.py  2.py  3.py  cards_phases.json  gamblers_phases.json
extra_scripts/: generate_empty_images.py
game_object/: CMakeLists.txt  game_object.cpp  game_object.hpp  game_object_manager.cpp  game_object_manager.hpp  game_objects_loader.cpp  game_objects_loader.hpp
game_states/: blackjack_close.cpp  blackjack_close.hpp  game_state.cpp  game_state.hpp  interrogation_state.cpp  interrogation_state.hpp  poker_close.cpp  poker_close.hpp  state_manager.cpp  state_manager.hpp  table_state.cpp  table_state.hpp  work_room.cpp  work_room.hpp
utils/: CMakeLists.txt  animation.cpp  animation.h  animations_manager.hpp  card.hpp  common.cpp  common.hpp  common_render_handlers.cpp  common_render_handlers.hpp  constants.h  constants.hpp  deck.cpp  deck.h  deck.hpp  drawer.hpp  event_state.hpp  event_wrapper.cpp  event_wrapper.hpp  game_object.cpp  game_object.hpp  game_object_manager.cpp  game_object_manager.hpp  game_objects_loader.cpp  game_objects_loader.hpp  popup_window.h  render_events_manager.hpp  stats_window.cpp  stats_window.h  stats_window.hpp  subwindows_manager.cpp  subwindows_manager.h  textures_loader.cpp  textures_loader.h  textures_loader.hpp  thread_safe_queue.hpp
